<resources>
    <string name="app_name">calculator</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="comma">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equals">=</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="del">clear</string>
    <string name="credits">made in Angbando</string>
    <string name="text">0</string>
    <string name="themes">Themes</string>
    <string name="day">DAY</string>
    <string name="night">NIGHT</string>
    <string name="themes_choice">Choice of theme</string>
</resources>