<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dogsss"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="530dp"
        android:text="@string/text"
        android:textColor="#8B4513"
        android:textSize="40sp"
        android:gravity="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="-45dp"
        android:backgroundTint="#2AFF5722"
        android:text="@string/key_1"
        android:textColor="#8B4513"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="215dp"
        android:backgroundTint="#2AFF5722"
        android:text="@string/key_2"
        android:textColor="#8B4513"

        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-45dp"
        android:layout_marginTop="215dp"
        android:backgroundTint="#2AFF5722"
        android:text="@string/key_3"
        android:textColor="#8B4513"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:backgroundTint="#2AFF5722"
        android:text="@string/key_4"
        android:textColor="#8B4513"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/button1"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/button1"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:backgroundTint="#2AFF5722"
        android:text="@string/key_5"
        android:textColor="#8B4513"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/button2"
        app:layout_constraintStart_toStartOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/button2"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:backgroundTint="#2AFF5722"
        android:text="@string/key_6"
        android:textColor="#8B4513"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/button3"
        app:layout_constraintStart_toStartOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/button3"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:backgroundTint="#2AFF5722"
        android:text="@string/key_7"
        android:textColor="#8B4513"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/button4"
        app:layout_constraintStart_toStartOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button4"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:backgroundTint="#2AFF5722"
        android:text="@string/key_8"
        android:textColor="#8B4513"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/button5"
        app:layout_constraintStart_toStartOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button5"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:backgroundTint="#2AFF5722"
        android:text="@string/key_9"
        android:textColor="#8B4513"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/button6"
        app:layout_constraintStart_toStartOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@id/button6"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:backgroundTint="#2AFF5722"
        android:text="@string/key_0"
        android:textColor="#8B4513"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/button8"
        app:layout_constraintStart_toStartOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/button8"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/comma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#2AFF5722"
        android:text="@string/comma"
        android:textColor="#8B4513"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button0"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="#2AFF5722"
        android:text="@string/plus"
        android:textColor="#8B4513"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/comma"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#2AFF5722"
        android:text="@string/minus"
        android:textColor="#8B4513"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/comma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:backgroundTint="#2AFF5722"
        android:text="@string/equals"
        android:textColor="#8B4513"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comma"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="23dp"
        android:backgroundTint="#2AFF5722"
        android:text="@string/multiply"
        android:textColor="#8B4513"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/equals"
        app:layout_constraintTop_toBottomOf="@id/plus"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="23dp"
        android:backgroundTint="#2AFF5722"
        android:text="@string/divide"
        android:textColor="#8B4513"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/equals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/minus"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:backgroundTint="#2AFF5722"
        android:text="@string/del"
        android:textColor="#8B4513"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="cursive"
        android:text="@string/credits"
        android:textColor="#8B4513"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>